fix: make tools text more readable

--- a/app/styles.css
+++ b/app/styles.css
@@ -536,8 +536,7 @@ section .content {
   .project__image-container1 {
     width: clamp(330px, 46vw, 570px);
     height: clamp(220px, 30.6vw, 380px);
-    filter: grayscale(100%) contrast(1) brightness(0.7) sepia() saturate(2)
-      hue-rotate(138deg);
+    filter: grayscale(100%) contrast(1.1) sepia() saturate(2) hue-rotate(138deg);
     z-index: 1;
     transition: filter 0.5s;
     position: static;
